--- a/tests/regression_tests/expressions/correct/comparation_operators.in
+++ b/tests/regression_tests/expressions/correct/comparation_operators.in
@@ -13,3 +13,33 @@
 %{ 3 != 1 + 2}
 %{ 3*2 != (1 + 2) * 2}
 %{ (5 == 5) != 1 }
+
+#{ 2* 3 < 6+1 }
+#{ 2*3 < 5+1}
+#{ 2*(3<4) < 5}
+#{ (4 < 5) < 2}
+#{ 4 < (5 < 2)}
+
+#{ 2* 3 <= 6+1 }
+#{ 2*3 <= 5+1}
+#{ 2*(3<=4) <= 5}
+#{ (4 <= 5) <= 2}
+#{ 4 <= (5 <= 2)}
+
+#{ 2* 3 > 6+1 }
+#{ 2*3 > 5+1}
+#{ 2*7 > 5}
+
+#{ 2* 3 >= 6+1 }
+#{ 2*3 >= 5+1}
+#{ 2*7 >= 5}
+
+#{ 4 === 4}
+#{ 1 == true }
+#{ 1 === true }
+
+#{ 4 !== 4}
+#{ 1 != false }
+#{ 1 !== false }
+
+#{ ((4 < 5) === ( 1 > 1) ) == 0}
