- Added debug function(s). - Changed the math_pi test.

--- a/tests/regression_tests/functions/correct/math_functions.in
+++ b/tests/regression_tests/functions/correct/math_functions.in
@@ -38,7 +38,7 @@ math_rand:
 {math_rand( 2, 2)}
 
 math_pi:
-{$pi = math_pi()}{math_round($pi)}
+{math_round( math_pi() )}
 
 math_is_finite:
 {math_is_finite( 3 )}
