- Added variable declaration to the regression tests. - Changed error handling in the symbol table. - Disabled the source_to_tst_test in the suite. These tests fail and are   redundant to the regression tests. - The key and value of the foreach don't need declaration.

--- a/tests/regression_tests/assignments/correct/array_operators.in
+++ b/tests/regression_tests/assignments/correct/array_operators.in
@@ -1,7 +1,7 @@
-{$a = array( 1, 2, 3 )}
+{var $a = array( 1, 2, 3 )}
 {$a[0]}
 {$a[1]}
 {$a[2]}
 
-{$b = array( "monkey", 42, true )}
+{var $b = array( "monkey", 42, true )}
 {$b[ $a[ 2 - 2] - 1 ]}
