--- a/tests/regression_tests/functions/correct/regexp_functions.in
+++ b/tests/regression_tests/functions/correct/regexp_functions.in
@@ -2,7 +2,7 @@ preg_has_match:
 {preg_has_match( "I just want to say: hi", "/hi/" )}
 
 preg_match:
-{$a = preg_match( "Hello world", "/^.*$/" )}{$a[0]}
+{var $a = preg_match( "Hello world", "/^.*$/" )}{$a[0]}
 
 preg_replace:
 {$a = preg_replace( "Hello world", "/.ello/", "Hi")}{$a}
@@ -14,4 +14,4 @@ preg_split:
 { $a = preg_split( "Hello world", "/\s/" )}{$a[1]} {$a[0]}
 
 preg_grep:
-{$in = array("Hello", "world" )}{$out = preg_grep($in, "/orld/" )}{$out[1]}
+{var $in = array("Hello", "world" )}{var $out = preg_grep($in, "/orld/" )}{$out[1]}
