--- a/tests/regression_tests/declaration/correct.in
+++ b/tests/regression_tests/declaration/correct.in
@@ -1,9 +1,9 @@
-{var $a = 5, $b = 2, $c = "hello", $d = 2*3}
+{var $a = 5, $b, $c = "hello", $d = 2*3, $e = $a}
 {$a}
-{$b}
+{$b = 2}{$b}
 {$c}
 {$d}
-{var $e, $f}
-{$e = 2}{$f = 1}
 {$e}
-{$f}
+{foreach array("key" => "value") as $a => $x}
+{$a} {$x}
+{/foreach}
