- Match also for cycle and use types. - Variable declarations should be in the top scope. (Not within a block.) - 'Use' symbols should be declared before the other types (var, cycle).

--- a/tests/regression_tests/declaration/correct.in
+++ b/tests/regression_tests/declaration/correct.in
@@ -1,3 +1,5 @@
+{use $myuse}
+{cycle $mycycle}
 {var $a = 5, $b, $c = "hello", $d = 2*3, $e = $a}
 {$a}
 {$b = 2}{$b}
@@ -7,3 +9,4 @@
 {foreach array("key" => "value") as $a => $x}
 {$a} {$x}
 {/foreach}
+{var $z = 2}
