- Cleaned up the literals and its sub parsers. - Error are now exceptions. - Added test cases for the literals.

--- a/tests/regression_tests/declaration/correct.in
+++ b/tests/regression_tests/declaration/correct.in
@@ -10,3 +10,6 @@
 {$a} {$x}
 {/foreach}
 {var $z = 2}
+{   var   $slarpasdf01398422ajdof}
+{   var   $qqqq  =                 1}
+{ /*comment*/  var /*make*/ $blarp /*things*/ = /*hard*/ 3 /*to*/, /*read*/ $brafa }
