- Don't check 'is value' if the operand from the array range (..) is a variable.

--- a/tests/regression_tests/expressions/correct/array_range.in
+++ b/tests/regression_tests/expressions/correct/array_range.in
@@ -12,3 +12,7 @@
 
 {$a = 'a'..'d'}
 {$a[0]}{$a[1]}{$a[2]}{$a[3]}
+
+{var $val1 = 1, $val2 = 4}
+{$a = $val1 .. $val2}
+{$a[0]}{$a[1]}{$a[2]}{$a[3]}
