- Empty blocks '{}' seemed to fail. - Empty comment: {//} gave a parser error.

--- a/tests/regression_tests/comment.in
+++ b/tests/regression_tests/comment.in
@@ -7,3 +7,18 @@ blablabla
 { 4 // + 4 
 }
 { 2 /* + 2 */ }
+{// This line will be ignored, and ends with a closing bracket } 
+{/* Ignore *//* me */}
+{//}
+{//a}
+{}
+{    }
+{/**/}
+{/**//**/}
+{       /*a*/}
+{///**/}
+{       //}
+{//
+}
+{///*
+ "hello" //*}
