- Fixed a bug in the get_class function. Due to a spelling error it would   throw a PHP Fatal Error.

--- a/tests/regression_tests/functions/correct/type_functions.in
+++ b/tests/regression_tests/functions/correct/type_functions.in
@@ -1,3 +1,4 @@
+{use $myTstStdObject}
 is_empty:
 {is_empty( "" )}
 
@@ -35,6 +36,7 @@ get_constant:
 {get_constant( "SEEK_CUR") }
 
 get_class:
+{get_class( $myTstStdObject )}
 
 cast_string:
 {cast_string(5.7)}
