- Allow a variation of 3 seconds. # The test failed a few times.

--- a/tests/regression_tests/functions/correct/date_functions.in
+++ b/tests/regression_tests/functions/correct/date_functions.in
@@ -1,5 +1,6 @@
 {use $timestamp}
 1. {date_format_timestamp( "Y-m-d", 1147362767 )}
 2. {date_format_timestamp( "Y-m-d H:m:i", 1147362767 )}
-3. {if (date_current_timestamp() == $timestamp)}correct
+{var $cur = date_current_timestamp()}
+3. {if ( $cur >= $timestamp && $cur <= $timestamp + 3 )}correct
 {/if}
