- Added typehints to the string functions. - Documented the str_wrap function. - Added a typehint test case for one string function.

--- a/tests/regression_tests/functions/correct/string_functions.in
+++ b/tests/regression_tests/functions/correct/string_functions.in
@@ -42,3 +42,4 @@ bla     " )}#
 contains 
 
 two paragraphs")}
+36. {str_wrap("abcdefghijklmnop", 4, "\n", true)}{str_wrap("qrst asdf asdf", 5, "\n")} 
