- Fixed bug# 008904: [Template] $def->isNestingBlock = false; and having code   {block}{/block} in template.

--- a/tests/regression_tests/custom_blocks/correct/nesting.in
+++ b/tests/regression_tests/custom_blocks/correct/nesting.in
@@ -12,21 +12,21 @@ NOOOOOoooooo
 
 {nesting_req_opt_parameter required="haha"}
 NOOOOOoooooo
-{/nesting_req_parameter}
+{/nesting_req_opt_parameter}
 
 {nesting_req_opt_parameter required="haha" optional="bla"}
 NOOOOOoooooo
-{/nesting_req_parameter}
+{/nesting_req_opt_parameter}
 
 {nesting_req_startexpression "Bla"}
 NOOOOOoooooo
-{/nesting_req_parameter}
+{/nesting_req_startexpression}
 
 {nesting_opt_startexpression "Bla"}
 NOOOOOoooooo
-{/nesting_req_parameter}
+{/nesting_opt_startexpression}
 
 {nesting_opt_startexpression}
 NOOOOOoooooo
-{/nesting_req_parameter}
+{/nesting_opt_startexpression}
 
