- Removed the spaces around the reference operator '->' (Bug #9290).

--- a/tests/regression_tests/use/correct/prop_and_func.in
+++ b/tests/regression_tests/use/correct/prop_and_func.in
@@ -1,3 +1,7 @@
 {use $mail}
 {$mail->from->firstName}
 {str_len($mail->from->lastName )}
+
+
+{$mail->class->from->firstName}
+{$mail-> class ->   class -> from->lastName . " is my last name"}
