--- a/tests/regression_tests/blocks/incorrect/non_matching_block_0065.in
+++ b/tests/regression_tests/blocks/incorrect/non_matching_block_0065.in
@@ -1,6 +1,6 @@
 {* file: non_matching_block_0065.in *}
 {var $foo = 1, $_false = false, $array = array( 1, 2 )}
-{case $foo}
+{case 5}
     {$foo}
 
 
