--- a/tests/regression_tests/blocks/incorrect/non_matching_block_0147.in
+++ b/tests/regression_tests/blocks/incorrect/non_matching_block_0147.in
@@ -1,7 +1,7 @@
 {* file: non_matching_block_0147.in *}
 {var $foo = 1, $_false = false, $array = array( 1, 2 )}
 {foreach $array as $bar}
-    {case $foo}
+    {case 5}
         {$foo}
     {/while}
 {/foreach}
